change suffix of config

--- a/supported_versions.conf
+++ b/supported_versions.conf
@@ -1,10 +1,11 @@
 # Redmine_version ruby_version
-4.2-stable 2.4
-4.2-stable 2.5
-4.2-stable 2.6
-4.2-stable 2.7
-5.0-stable 2.5
-5.0-stable 2.6
+# 4.2-stable 2.4
+# 4.2-stable 2.5
+# 4.2-stable 2.6
+# 4.2-stable 2.7
+
+# 5.0-stable 2.5
+# 5.0-stable 2.6
 5.0-stable 2.7
 5.0-stable 3.0
 5.0-stable 3.1
