--- a/database.yml
+++ b/database.yml
@@ -4,54 +4,31 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-sqlite3: &sqlite3
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
-  database: db/redmine.sqlite3
-
-sqlite3_test: &sqlite3_test
-  <<: *<%= 'sqlite3' %>
-  database: db/redmine.sqlite3_test 
-
-mysql: &mysql
-  adapter: mysql2
+production:
+  adapter: <%= ENV['DB'] || 'sqlite3' %>
   encoding: utf8
-  database: <%= ENV['DB_NAME'] || 'redmine' %>
-  username: <%= ENV['DB_USERNAME']  || 'root' %>
-  password: <%= ENV['DB_PASSWORD']  || 'root' %>
-  host: <%= ENV['DB_HOST'] || 'mysql' %>
-  port: <%= ENV['DB_PORT'] || 3306 %>
-
-mysql_test: &mysql_test
-  <<: *<%= 'mysql' %>
-  database: redmine_test
-
-postgres: &postgres
-  adapter: postgresql
-  encoding: utf8
-  database: <%= ENV['DB_NAME'] || 'redmine' %>
-  username: <%= ENV['DB_USERNAME'] || 'postgres' %>
-  password: <%= ENV['DB_PASSWORD'] || 'postgres' %>
-  host: <%= ENV['DB_HOST'] || 'postgres' %>
-  port: <%= ENV['DB_PORT'] || 5432 %>
-
-postgres_test: &postgres_test
-  <<: *<%= 'postgres' %>
-  database: redmine_test
-
+  database: <%= ENV['DB_NAME'] || 'db/redmine.sqlite3' %>
+  username: <%= ENV['DB_USERNAME']  || '' %>
+  password: <%= ENV['DB_PASSWORD']  || '' %>
+  host: <%= ENV['DB_HOST'] || 'localhost' %>
+  port: <%= ENV['DB_PORT'] || '' %>
 
 development:
-  <<: *<%= ENV['DB'] || 'sqlite3' %>
+  adapter: <%= ENV['DB'] || 'sqlite3' %>
+  encoding: utf8
+  database: <%= ENV['DB_NAME'] || 'db/redmine.sqlite3' %>
+  username: <%= ENV['DB_USERNAME']  || '' %>
+  password: <%= ENV['DB_PASSWORD']  || '' %>
+  host: <%= ENV['DB_HOST'] || 'localhost' %>
+  port: <%= ENV['DB_PORT'] || '' %>
 
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *<%= "#{ENV['DB']}_test" || 'sqlite3_test' %>
-  
+  adapter: <%= ENV['DB'] || 'sqlite3' %>
+  encoding: utf8
+  database: <%= ENV['DB_NAME'] || 'db/redmine.sqlite3' %>_test
+  username: <%= ENV['DB_USERNAME']  || '' %>
+  password: <%= ENV['DB_PASSWORD']  || '' %>
+  host: <%= ENV['DB_HOST'] || 'localhost' %>
+  port: <%= ENV['DB_PORT'] || '' %>
 
-production:
-  <<: *<%= ENV['DB'] || 'sqlite3' %>
 
