--- a/launch.json
+++ b/launch.json
@@ -27,7 +27,12 @@
                 "0.0.0.0"
             ],
             "env":{
-                "DB": "postgres"
+                "DB": "postgresql",
+                "DB_NAME": "redmine",
+                "DB_USERNAME": "postgres",
+                "DB_PASSWORD": "postgres",
+                "DB_HOST": "postgres",
+                "DB_PORT": 5432
             }
         },
         {
@@ -42,7 +47,12 @@
                 "0.0.0.0"
             ],
             "env":{
-                "DB": "mysql"
+                "DB": "mysql2",
+                "DB_NAME": "redmine",
+                "DB_USERNAME": "root",
+                "DB_PASSWORD": "root",
+                "DB_HOST": "mysql",
+                "DB_PORT": 3306
             }
         },
         {
@@ -73,7 +83,12 @@
             ],
             "env":{
                 "RAILS_ENV": "test",
-                "DB": "postgres"
+                "DB": "postgresql",
+                "DB_NAME": "redmine",
+                "DB_USERNAME": "postgres",
+                "DB_PASSWORD": "postgres",
+                "DB_HOST": "postgres",
+                "DB_PORT": 5432
             }
         },
         {
@@ -89,7 +104,12 @@
             ],
             "env":{
                 "RAILS_ENV": "test",
-                "DB": "mysql"
+                "DB": "mysql2",
+                "DB_NAME": "redmine",
+                "DB_USERNAME": "root",
+                "DB_PASSWORD": "root",
+                "DB_HOST": "mysql",
+                "DB_PORT": 3306
             }
         }
     ]
