Dockerfile: Add bash-completion package to the installation

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y build-essential \
     vim \
     gawk \
     less \
+    bash-completion \
     && apt-get clean \
     && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/*
