--- a/docker/supported_versions.conf
+++ b/docker/supported_versions.conf
@@ -5,14 +5,14 @@
 # 4.2-stable 2.7
 
 
-5.0-stable 3.0
-5.0-stable 3.1
+# 5.0-stable 3.0
+# 5.0-stable 3.1
 
-5.1-stable 3.0
-5.1-stable 3.1
+5.1-stable 3.0 bullseye
+5.1-stable 3.1 bookworm
 5.1-stable 3.2
 
-6.0-stable 3.1
+6.0-stable 3.1 bookworm
 6.0-stable 3.2
 6.0-stable 3.3
 
