--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: build_archive
+name: docker-build
 on:
   push:
     branches:
@@ -6,37 +6,11 @@ on:
       - develop
     paths:
       - "docker/**"
-    tags:
-      - "**"
+      - ".github/workflows/release.yml"
   workflow_dispatch:
-permissions:
-  contents: write
 env:
-  SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
   IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/redmine_devcontainer
 jobs:
-  archive:
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set version
-        id: version
-        run: |
-          REPOSITORY=$(echo ${{ github.repository }} | sed -e "s#.*/##")
-          VERSION=$(echo ${{ github.ref }} | sed -e "s#refs/tags/##g")
-          echo "version=$VERSION" >> $GITHUB_ENV
-          echo "filename=$REPOSITORY-$VERSION" >> $GITHUB_ENV
-          echo "plugin=$REPOSITORY" >> $GITHUB_ENV
-      - uses: actions/checkout@v4
-      - name: Archive
-        run: |
-          sh -x dot_devcontainer/build_archive.sh
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          draft: true
-          files: dot_devcontainer/dot_devcontainer.tgz
-
   build-amd64:
     runs-on: ubuntu-latest
     strategy:
